# 3d-voxel

./: CMakeLists.txt  README.md  main.cpp
include/: Camera.cpp  Camera.h
include/blocks/: Block.cpp  Block.h  BlockID.h  Chunk.cpp  Chunk.h  Cube.h  World.cpp  World.h
include/rendering/: Camera.h  TextureAtlas.cpp  TextureAtlas.h  TextureShader.cpp  TextureShader.h
include/utility/: InputManagerWrapper.cpp  InputManagerWrapper.h
src/blocks/: Cube.cpp
src/rendering/: Camera.cpp
